Implement the contact page details

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -25,3 +25,5 @@ NGINX_PORT=8080
 CELERY_BROKER_URL=redis://redis-server:6379
 CELERY_RESULT_BACKEND=redis://redis-server:6379
 
+# Sendgrid
+SENDGRID_API=
