--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,8 @@ Babel==2.8.0
 backcall==0.2.0
 beautifulsoup4==4.9.1
 billiard==3.6.3.0
+boto3==1.14.39
+botocore==1.17.39
 celery==4.4.2
 certifi==2020.6.20
 chardet==3.0.4
@@ -21,10 +23,12 @@ django-guardian==2.3.0
 django-livereload-server==0.3.2
 django-phonenumber-field==4.0.0
 django-rest-auth==0.9.5
+django-storages==1.9.1
 django-timezone-field==4.0
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.4.0
+docutils==0.15.2
 factory-boy==2.12.0
 Faker==4.1.1
 gunicorn==20.0.4
@@ -33,6 +37,7 @@ ipython==7.16.1
 ipython-genutils==0.2.0
 itypes==1.2.0
 jedi==0.17.1
+jmespath==0.10.0
 kombu==4.6.11
 Markdown==3.0.1
 mysqlclient==1.4.6
@@ -48,13 +53,17 @@ PyJWT==1.7.1
 python-crontab==2.5.1
 python-dateutil==2.8.1
 python-decouple==3.1
+python-http-client==3.2.7
 pytz==2018.5
 PyYAML==5.3.1
 redis==3.5.3
 requests==2.24.0
+s3transfer==0.3.3
+sendgrid==6.4.5
 six==1.11.0
 soupsieve==2.0.1
 sqlparse==0.3.1
+starkbank-ecdsa==1.0.0
 text-unidecode==1.3
 tornado==6.0.4
 traitlets==4.3.3
