Implement client testimonials

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,3 +27,8 @@ CELERY_RESULT_BACKEND=redis://redis-server:6379
 
 # Sendgrid
 SENDGRID_API=
+
+# AWS
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_STORAGE_BUCKET_NAME=eyobofficial-portfolio
