--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,7 +9,8 @@ botocore==1.17.39
 celery==4.4.2
 certifi==2020.6.20
 chardet==3.0.4
-coreapi==1.32.3
+coreapi==2.3.3
+coreschema==0.0.4
 coverage==5.2
 decorator==4.4.2
 Django==3.0.7
@@ -29,18 +30,23 @@ djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.4.0
 docutils==0.15.2
+drf-yasg==1.17.1
 factory-boy==2.12.0
 Faker==4.1.1
 gunicorn==20.0.4
 idna==2.10
+inflection==0.5.0
 ipython==7.16.1
 ipython-genutils==0.2.0
 itypes==1.2.0
 jedi==0.17.1
+Jinja2==2.11.2
 jmespath==0.10.0
 kombu==4.6.11
 Markdown==3.0.1
+MarkupSafe==1.1.1
 mysqlclient==1.4.6
+packaging==20.4
 parso==0.7.0
 pexpect==4.8.0
 phonenumbers==8.12.6
@@ -50,6 +56,7 @@ prompt-toolkit==3.0.5
 ptyprocess==0.6.0
 Pygments==2.6.1
 PyJWT==1.7.1
+pyparsing==2.4.7
 python-crontab==2.5.1
 python-dateutil==2.8.1
 python-decouple==3.1
@@ -58,6 +65,8 @@ pytz==2018.5
 PyYAML==5.3.1
 redis==3.5.3
 requests==2.24.0
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
 s3transfer==0.3.3
 sendgrid==6.4.5
 six==1.11.0
