Add new dependecy for angular-cli-ghpages

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -147,8 +147,13 @@
               "devServerTarget": "frontend:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "frontend"
 }
