--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.4.1",
     "feather-icons": "^4.28.0",
     "hover.css": "^2.3.2",
+    "linearicons": "^1.0.2",
     "ngx-owl-carousel-o": "^4.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
