Add a `not-found` angular module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@portfolio/*": ["src/app/portfolio/*"],
       "@contact/*": ["src/app/contact/*"],
       "@shared/*": ["src/app/shared/*"],
+      "@not-found/*": ["src/app/not-found/*"],
       "@environments/*": ["src/environments/*"]
     }
   },
